tests/snapshots/binding_analysis/dict_comp_and_generator.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/binding_analysis/dict_comp_and_generator.input.py
---

