tests/snapshots/binding_analysis/dict_comp_and_generator.input.py.snap
---
source: tests/binding_analysis.rs
expression: source.binding_analysis()
input_file: tests/fixtures/binding_analysis/dict_comp_and_generator.input.py
---
bindings:
  - kinds:
      - Assignment
    name: pairs
    read_offsets:
      - 237
      - 266
      - 299
    scope: 0
    write_offsets:
      - 180
  - kinds:
      - Comprehension
    name: k
    read_offsets:
      - 220
    scope: 1
    write_offsets:
      - 229
  - kinds:
      - Comprehension
    name: v
    read_offsets:
      - 223
    scope: 1
    write_offsets:
      - 232
  - kinds:
      - Assignment
    name: mapping
    read_offsets: []
    scope: 0
    write_offsets:
      - 209
  - kinds:
      - Comprehension
    name: k
    read_offsets:
      - 252
    scope: 2
    write_offsets:
      - 258
  - kinds:
      - Comprehension
    name: _
    read_offsets: []
    scope: 2
    write_offsets:
      - 261
  - kinds:
      - Assignment
    name: keys
    read_offsets: []
    scope: 0
    write_offsets:
      - 244
  - kinds:
      - Comprehension
    name: _
    read_offsets: []
    scope: 3
    write_offsets:
      - 291
  - kinds:
      - Comprehension
    name: v
    read_offsets:
      - 285
    scope: 3
    write_offsets:
      - 294
  - kinds:
      - Assignment
    name: total
    read_offsets: []
    scope: 0
    write_offsets:
      - 273
scopes:
  - bindings:
      keys: 6
      mapping: 3
      pairs: 0
      total: 9
    kind: Module
    parent: ~
  - bindings:
      k: 1
      v: 2
    kind: Comprehension
    parent: 0
  - bindings:
      _: 5
      k: 4
    kind: Comprehension
    parent: 0
  - bindings:
      _: 7
      v: 8
    kind: Comprehension
    parent: 0
