tests/snapshots/binding_analysis/dunder_private.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/binding_analysis/dunder_private.input.py
---

