tests/snapshots/binding_analysis/exception_binding.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/binding_analysis/exception_binding.input.py
---

