tests/snapshots/binding_analysis/for_loop.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/binding_analysis/for_loop.input.py
---

