tests/snapshots/binding_analysis/for_loop.input.py.snap
---
source: tests/binding_analysis.rs
expression: source.binding_analysis()
input_file: tests/fixtures/binding_analysis/for_loop.input.py
---
bindings:
  - kinds:
      - Assignment
    name: xs
    read_offsets:
      - 170
      - 199
    scope: 0
    write_offsets:
      - 139
  - kinds:
      - For
    name: i
    read_offsets:
      - 184
    scope: 0
    write_offsets:
      - 165
  - kinds:
      - For
    name: a
    read_offsets:
      - 213
    scope: 0
    write_offsets:
      - 191
  - kinds:
      - For
    name: b
    read_offsets:
      - 217
    scope: 0
    write_offsets:
      - 194
scopes:
  - bindings:
      a: 2
      b: 3
      i: 1
      xs: 0
    kind: Module
    parent: ~
