tests/snapshots/binding_analysis/imports.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/binding_analysis/imports.input.py
---

