tests/snapshots/binding_analysis/lambda.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/binding_analysis/lambda.input.py
---

