tests/snapshots/binding_analysis/lambda.input.py.snap
---
source: tests/binding_analysis.rs
expression: source.binding_analysis()
input_file: tests/fixtures/binding_analysis/lambda.input.py
---
bindings:
  - kinds:
      - Assignment
    name: x
    read_offsets: []
    scope: 0
    write_offsets:
      - 127
  - kinds:
      - Parameter
    name: x
    read_offsets:
      - 147
    scope: 1
    write_offsets:
      - 144
  - kinds:
      - Assignment
    name: f
    read_offsets: []
    scope: 0
    write_offsets:
      - 133
scopes:
  - bindings:
      f: 2
      x: 0
    kind: Module
    parent: ~
  - bindings:
      x: 1
    kind: Function
    parent: 0
